--- a/indexFourth.html
+++ b/indexFourth.html
@@ -7,227 +7,286 @@
     <title>Document</title>
   </head>
   <body>
-    <canvas id="canvas" width="400" height="400"></canvas>
-    <script>
-      let canvas = document.getElementById('canvas');
-      let ctx = canvas.getContext('2d');
-      let arr15 = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15];
-      for (let i = 0; i < 10; i++) arr15.sort(() => Math.random() - 0.5);
-      //   console.log(arr15);
-      let drawSquare = function (x, y, val) {
-        ctx.fillStyle = 'black';
-        ctx.fillRect(x, y, 100, 100);
-        if (val === 0) {
-          ctx.fillStyle = 'white';
-        } else {
-          ctx.fillStyle = 'teal';
-        }
-        ctx.fillRect(x + 5, y + 5, 90, 90);
-        ctx.font = '60px Arial';
-        ctx.fillStyle = 'white';
-        if (val < 10) {
-          ctx.fillText(val, x + 35, y + 70);
-        } else {
-          ctx.fillText(val, x + 15, y + 70);
-        }
-      };
-      //   drawSquare(200, 200, 4);
-      let drawTag = function (pos, val) {
-        switch (pos) {
-          case 0:
-            drawSquare(0, 0, val);
-            break;
-          case 1:
-            drawSquare(100, 0, val);
-            break;
-          case 2:
-            drawSquare(200, 0, val);
-            break;
-          case 3:
-            drawSquare(300, 0, val);
-            break;
-          case 4:
-            drawSquare(0, 100, val);
-            break;
-          case 5:
-            drawSquare(100, 100, val);
-            break;
-          case 6:
-            drawSquare(200, 100, val);
-            break;
-          case 7:
-            drawSquare(300, 100, val);
-            break;
-          case 8:
-            drawSquare(0, 200, val);
-            break;
-          case 9:
-            drawSquare(100, 200, val);
-            break;
-          case 10:
-            drawSquare(200, 200, val);
-            break;
-          case 11:
-            drawSquare(300, 200, val);
-            break;
-          case 12:
-            drawSquare(0, 300, val);
-            break;
-          case 13:
-            drawSquare(100, 300, val);
-            break;
-          case 14:
-            drawSquare(200, 300, val);
-            break;
-          case 15:
-            drawSquare(300, 300, val);
-            break;
-        }
-      };
-      let checkPlace = function (evX) {
-        if (evX < 110) {
-          return 1;
-        }
-        if (evX < 210) {
-          return 2;
-        }
-        if (evX < 310) {
-          return 3;
-        }
-        if (evX < 410) {
-          return 4;
-        }
-      };
+    <!-- <canvas id="canvas" width="400" height="400"></canvas>
+     -->
+    <form name="myForm">
+      <input type="button" value=" " onclick="game(0)" />
+      <input type="button" value=" " onclick="game(1)" />
+      <input type="button" value=" " onclick="game(2)" />
+      <input type="button" value=" " onclick="game(3)" />
+      <br />
+      <input type="button" value=" " onclick="game(4)" />
+      <input type="button" value=" " onclick="game(5)" />
+      <input type="button" value=" " onclick="game(6)" />
+      <input type="button" value=" " onclick="game(7)" />
+      <br />
+      <input type="button" value=" " onclick="game(8)" />
+      <input type="button" value=" " onclick="game(9)" />
+      <input type="button" value=" " onclick="game(10)" />
+      <input type="button" value=" " onclick="game(11)" />
+      <br />
+      <input type="button" value=" " onclick="game(12)" />
+      <input type="button" value=" " onclick="game(13)" />
+      <input type="button" value=" " onclick="game(14)" />
+      <input type="button" value=" " onclick="game(15)" />
 
-      for (let i = 0; i <= 15; i++) {
-        drawTag(i, arr15[i]);
+      <input
+        type="button"
+        value="Play"
+        class="button"
+        onclick="newGame()"
+      /><!--16-->
+    </form>
+    <script>
+      // let canvas = document.getElementById('canvas');
+      // let ctx = canvas.getContext('2d');
+      // let arr15 = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15];
+      // for (let i = 0; i < 10; i++) arr15.sort(() => Math.random() - 0.5);
+      // //   console.log(arr15);
+      // let drawSquare = function (x, y, val) {
+      //   ctx.fillStyle = 'black';
+      //   ctx.fillRect(x, y, 100, 100);
+      //   if (val === 0) {
+      //     ctx.fillStyle = 'white';
+      //   } else {
+      //     ctx.fillStyle = 'teal';
+      //   }
+      //   ctx.fillRect(x + 5, y + 5, 90, 90);
+      //   ctx.font = '60px Arial';
+      //   ctx.fillStyle = 'white';
+      //   if (val < 10) {
+      //     ctx.fillText(val, x + 35, y + 70);
+      //   } else {
+      //     ctx.fillText(val, x + 15, y + 70);
+      //   }
+      // };
+      // //   drawSquare(200, 200, 4);
+      // let drawTag = function (pos, val) {
+      //   switch (pos) {
+      //     case 0:
+      //       drawSquare(0, 0, val);
+      //       break;
+      //     case 1:
+      //       drawSquare(100, 0, val);
+      //       break;
+      //     case 2:
+      //       drawSquare(200, 0, val);
+      //       break;
+      //     case 3:
+      //       drawSquare(300, 0, val);
+      //       break;
+      //     case 4:
+      //       drawSquare(0, 100, val);
+      //       break;
+      //     case 5:
+      //       drawSquare(100, 100, val);
+      //       break;
+      //     case 6:
+      //       drawSquare(200, 100, val);
+      //       break;
+      //     case 7:
+      //       drawSquare(300, 100, val);
+      //       break;
+      //     case 8:
+      //       drawSquare(0, 200, val);
+      //       break;
+      //     case 9:
+      //       drawSquare(100, 200, val);
+      //       break;
+      //     case 10:
+      //       drawSquare(200, 200, val);
+      //       break;
+      //     case 11:
+      //       drawSquare(300, 200, val);
+      //       break;
+      //     case 12:
+      //       drawSquare(0, 300, val);
+      //       break;
+      //     case 13:
+      //       drawSquare(100, 300, val);
+      //       break;
+      //     case 14:
+      //       drawSquare(200, 300, val);
+      //       break;
+      //     case 15:
+      //       drawSquare(300, 300, val);
+      //       break;
+      //   }
+      // };
+      // let checkPlace = function (evX) {
+      //   if (evX < 110) {
+      //     return 1;
+      //   }
+      //   if (evX < 210) {
+      //     return 2;
+      //   }
+      //   if (evX < 310) {
+      //     return 3;
+      //   }
+      //   if (evX < 410) {
+      //     return 4;
+      //   }
+      // };
+
+      // for (let i = 0; i <= 15; i++) {
+      //   drawTag(i, arr15[i]);
+      // }
+
+      // canvas.addEventListener('click', function (event) {
+      //   let place;
+      //   let clickPos;
+      //   if (event.clientY < 110) {
+      //     place = checkPlace(event.clientX);
+
+      //     switch (place) {
+      //       case 1:
+      //         clickPos = 0;
+      //         break;
+      //       case 2:
+      //         clickPos = 1;
+      //         break;
+      //       case 3:
+      //         clickPos = 2;
+      //         break;
+      //       case 4:
+      //         clickPos = 3;
+
+      //         break;
+      //     }
+      //   }
+      //   if (event.clientY > 110 && event.clientY < 210) {
+      //     place = checkPlace(event.clientX);
+      //     switch (place) {
+      //       case 1:
+      //         clickPos = 4;
+
+      //         break;
+      //       case 2:
+      //         clickPos = 5;
+
+      //         break;
+      //       case 3:
+      //         clickPos = 6;
+
+      //         break;
+      //       case 4:
+      //         clickPos = 7;
+
+      //         break;
+      //     }
+      //   }
+      //   if (event.clientY > 210 && event.clientY < 310) {
+      //     place = checkPlace(event.clientX);
+      //     switch (place) {
+      //       case 1:
+      //         clickPos = 8;
+
+      //         break;
+      //       case 2:
+      //         clickPos = 9;
+
+      //         break;
+      //       case 3:
+      //         clickPos = 10;
+
+      //         break;
+      //       case 4:
+      //         clickPos = 11;
+
+      //         break;
+      //     }
+      //   }
+      //   if (event.clientY > 310 && event.clientY < 410) {
+      //     place = checkPlace(event.clientX);
+      //     switch (place) {
+      //       case 1:
+      //         clickPos = 12;
+
+      //         break;
+      //       case 2:
+      //         clickPos = 13;
+
+      //         break;
+      //       case 3:
+      //         clickPos = 14;
+
+      //         break;
+      //       case 4:
+      //         clickPos = 15;
+
+      //         break;
+      //     }
+      //   }
+      //   // console.log(clickPos);
+      //   if (arr15[clickPos - 4] === 0) {
+      //     arr15[clickPos - 4] = arr15[clickPos];
+      //     arr15[clickPos] = 0;
+      //     for (let i = 0; i <= 15; i++) {
+      //       drawTag(i, arr15[i]);
+      //     }
+      //   }
+      //   if (arr15[clickPos + 4] === 0) {
+      //     arr15[clickPos + 4] = arr15[clickPos];
+      //     arr15[clickPos] = 0;
+      //     for (let i = 0; i <= 15; i++) {
+      //       drawTag(i, arr15[i]);
+      //     }
+      //   }
+      //   if (
+      //     arr15[clickPos + 1] === 0 &&
+      //     clickPos !== 3 &&
+      //     clickPos !== 7 &&
+      //     clickPos !== 11
+      //   ) {
+      //     arr15[clickPos + 1] = arr15[clickPos];
+      //     arr15[clickPos] = 0;
+      //     for (let i = 0; i <= 15; i++) {
+      //       drawTag(i, arr15[i]);
+      //     }
+      //   }
+      //   if (
+      //     arr15[clickPos - 1] === 0 &&
+      //     clickPos !== 4 &&
+      //     clickPos !== 8 &&
+      //     clickPos !== 12
+      //   ) {
+      //     arr15[clickPos - 1] = arr15[clickPos];
+      //     arr15[clickPos] = 0;
+      //     for (let i = 0; i <= 15; i++) {
+      //       drawTag(i, arr15[i]);
+      //     }
+      //   }
+      // });
+      function newGame() {
+        var f = document.myForm.elements;
+        var masNum = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, ' '];
+        var lastNum = 15;
+
+        var f = document.myForm.elements;
+        for (var i = 0; i < 16; i++) {
+          var a = Math.round(Math.random() * lastNum);
+          f[i].value = masNum[a];
+
+          masNum[a] = masNum[lastNum];
+          lastNum--;
+        }
       }
 
-      canvas.addEventListener('click', function (event) {
-        let place;
-        let clickPos;
-        if (event.clientY < 110) {
-          place = checkPlace(event.clientX);
+      function myChange(n, m) {
+        var f = document.myForm.elements;
+        //alert(f[0].value);
+        var f0 = f[n].value;
+        f[n].value = f[m].value;
+        f[m].value = f0;
+      }
 
-          switch (place) {
-            case 1:
-              clickPos = 0;
-              break;
-            case 2:
-              clickPos = 1;
-              break;
-            case 3:
-              clickPos = 2;
-              break;
-            case 4:
-              clickPos = 3;
-
-              break;
-          }
-        }
-        if (event.clientY > 110 && event.clientY < 210) {
-          place = checkPlace(event.clientX);
-          switch (place) {
-            case 1:
-              clickPos = 4;
-
-              break;
-            case 2:
-              clickPos = 5;
-
-              break;
-            case 3:
-              clickPos = 6;
-
-              break;
-            case 4:
-              clickPos = 7;
-
-              break;
-          }
-        }
-        if (event.clientY > 210 && event.clientY < 310) {
-          place = checkPlace(event.clientX);
-          switch (place) {
-            case 1:
-              clickPos = 8;
-
-              break;
-            case 2:
-              clickPos = 9;
-
-              break;
-            case 3:
-              clickPos = 10;
-
-              break;
-            case 4:
-              clickPos = 11;
-
-              break;
-          }
-        }
-        if (event.clientY > 310 && event.clientY < 410) {
-          place = checkPlace(event.clientX);
-          switch (place) {
-            case 1:
-              clickPos = 12;
-
-              break;
-            case 2:
-              clickPos = 13;
-
-              break;
-            case 3:
-              clickPos = 14;
-
-              break;
-            case 4:
-              clickPos = 15;
-
-              break;
-          }
-        }
-        // console.log(clickPos);
-        if (arr15[clickPos - 4] === 0) {
-          arr15[clickPos - 4] = arr15[clickPos];
-          arr15[clickPos] = 0;
-          for (let i = 0; i <= 15; i++) {
-            drawTag(i, arr15[i]);
-          }
-        }
-        if (arr15[clickPos + 4] === 0) {
-          arr15[clickPos + 4] = arr15[clickPos];
-          arr15[clickPos] = 0;
-          for (let i = 0; i <= 15; i++) {
-            drawTag(i, arr15[i]);
-          }
-        }
-        if (
-          arr15[clickPos + 1] === 0 &&
-          clickPos !== 3 &&
-          clickPos !== 7 &&
-          clickPos !== 11
-        ) {
-          arr15[clickPos + 1] = arr15[clickPos];
-          arr15[clickPos] = 0;
-          for (let i = 0; i <= 15; i++) {
-            drawTag(i, arr15[i]);
-          }
-        }
-        if (
-          arr15[clickPos - 1] === 0 &&
-          clickPos !== 4 &&
-          clickPos !== 8 &&
-          clickPos !== 12
-        ) {
-          arr15[clickPos - 1] = arr15[clickPos];
-          arr15[clickPos] = 0;
-          for (let i = 0; i <= 15; i++) {
-            drawTag(i, arr15[i]);
-          }
-        }
-      });
+      function game(n) {
+        var f = document.myForm.elements;
+        if (n % 4 != 3 && f[n + 1].value == ' ') myChange(n, n + 1);
+        if (n % 4 != 0 && f[n - 1].value == ' ') myChange(n, n - 1);
+        if (n <= 11 && f[n + 4].value == ' ') myChange(n, n + 4);
+        if (n >= 4 && f[n - 4].value == ' ') myChange(n, n - 4);
+      }
     </script>
   </body>
 </html>
